--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -5,14 +5,14 @@
 // only as information/reference.
 
 // Server Communication username and password.
-userid: s1
-passwd: p1
+userid: trincli0200
+passwd: ragnarok
 
 // Server name, use alternative character such as ASCII 160 for spaces.
 // NOTE: Do not use spaces or any of these characters which are not allowed in
 //       Windows filenames \/:*?"<>|
 //       ... or else guild emblems won't work client-side!
-server_name: rAthena
+server_name: Refreshed
 
 // Wisp name for server: used to send wisp from server to players (between 4 to 23 characters)
 wisp_server_name: Server
@@ -34,7 +34,7 @@ login_port: 6900
 // Character Server IP
 // The IP address which clients will use to connect.
 // Set this to what your server's public IP address is.
-//char_ip: 127.0.0.1
+char_ip: 23.88.84.220
 
 // Character Server Port
 char_port: 6121
@@ -138,7 +138,7 @@ char_name_option: 1
 
 // Set the letters/symbols that you want use with the 'char_name_option' option.
 // Note: Don't add spaces unless you mean to add 'space' to the list.
-char_name_letters: abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890
+char_name_letters: abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ
 
 // Restrict character deletion by BaseLevel
 // 0: no restriction (players can delete characters of any level)
