--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -27,33 +27,33 @@ party_share_level: 15
 // Global SQL settings
 // overridden by local settings when the hostname is defined there
 // (currently only the login-server reads/obeys these settings)
-sql.db_hostname: 127.0.0.1
+sql.db_hostname: 192.168.1.50
 sql.db_port: 3306
-sql.db_username: ragnarok
-sql.db_password: ragnarok
-sql.db_database: ragnarok
+sql.db_username: trincli0200
+sql.db_password: InJPaCllnyUVxarOJaKlb4zd
+sql.db_database: trincli0200
 sql.codepage:
 
 // MySQL Character SQL server
-char_server_ip: 127.0.0.1
+char_server_ip: 192.168.1.50
 char_server_port: 3306
-char_server_id: ragnarok
-char_server_pw: ragnarok
-char_server_db: ragnarok
+char_server_id: trincli0200
+char_server_pw: InJPaCllnyUVxarOJaKlb4zd
+char_server_db: trincli0200
 
 // MySQL Map SQL Server
-map_server_ip: 127.0.0.1
+map_server_ip: 192.168.1.50
 map_server_port: 3306
-map_server_id: ragnarok
-map_server_pw: ragnarok
-map_server_db: ragnarok
+map_server_id: trincli0200
+map_server_pw: InJPaCllnyUVxarOJaKlb4zd
+map_server_db: trincli0200
 
 // MySQL Log SQL Database
-log_db_ip: 127.0.0.1
+log_db_ip: 192.168.1.50
 log_db_port: 3306
-log_db_id: ragnarok
-log_db_pw: ragnarok
-log_db_db: ragnarok
+log_db_id: trincli0200
+log_db_pw: InJPaCllnyUVxarOJaKlb4zd
+log_db_db: trincli0200
 log_codepage:
 log_login_db: loginlog
 
