--- a/conf/map_athena.conf
+++ b/conf/map_athena.conf
@@ -10,8 +10,8 @@
 //                     Configuration Info
 //--------------------------------------------------------------
 // Interserver communication passwords, set in account.txt (or equiv.)
-userid: s1
-passwd: p1
+userid: trincli0200
+passwd: ragnarok
 
 // Character Server IP
 // The map server connects to the character server using this IP address.
@@ -30,7 +30,7 @@ char_port: 6121
 // Map Server IP
 // The IP address which clients will use to connect.
 // Set this to what your server's public IP address is.
-//map_ip: 127.0.0.1
+map_ip: 23.88.84.220
 
 // Map Server Port
 map_port: 5121
