--- a/conf/battle/player.conf
+++ b/conf/battle/player.conf
@@ -10,10 +10,10 @@
 //--------------------------------------------------------------
 
 // Players' maximum HP rate? (Default is 100)
-hp_rate: 100
+hp_rate: 500
 
 // Players' maximum SP rate? (Default is 100)
-sp_rate: 100
+sp_rate: 500
 
 // Whether or not cards and attributes of the left hand are applied to the right hand attack (Note 1)
 // (It is 'yes' on official servers)
@@ -36,7 +36,7 @@ player_skillup_limit: yes
 
 // Quest skills can be learned? (Note 1)
 // Setting this to yes can open an exploit on your server!
-quest_skill_learn: no
+quest_skill_learn: yes
 
 // When skills are reset, quest skills are reset as well? (Note 1)
 // Setting this to yes can open an exploit on your server!
